--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,9 @@
   text-align: center;
   color: antiquewhite;
 }
+
+.user-card {
+  padding: 1.5rem;
+  border: 1px solid grey;
+  border-radius: 10px;
+} 
